migrate all methods and files

--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -3,21 +3,24 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>List</ion-title>
+    <ion-title>Venture</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+    pullingText="Pull to refresh ventures..."
+    refreshingSpinner="dots">
+    </ion-refresher-content>
+  </ion-refresher>
   <ion-list>
-    <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
-      <ion-icon [name]="item.icon" item-left></ion-icon>
-      {{item.title}}
-      <div class="item-note" item-right>
-        {{item.note}}
+  <button ion-item *ngFor="let venture of ventureList" (click)="ventureTapped($event, venture)">
+      <ion-icon [name]="venture.icon" item-left></ion-icon>
+      {{venture.name}}
+      <div class="venture-id" item-right>
+        {{venture.id}}
       </div>
-    </button>
+  </button>
   </ion-list>
-  <div *ngIf="selectedItem" padding>
-    You navigated here from <b>{{selectedItem.title}}</b>
-  </div>
 </ion-content>
