--- a/src/pages/show/show.html
+++ b/src/pages/show/show.html
@@ -1,18 +1,17 @@
-<!--
-  Generated template for the ShowPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>show</ion-title>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>Venture</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
+<p>{{this.name}}</p>
 
+<p>{{this.body}}</p>
+
+<p>Latitude: {{this.lat}} {{this.lon}}</p>
 </ion-content>
