--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
     pullingText="Pull to refresh ventures..."
@@ -16,11 +16,12 @@
   </ion-refresher>
   <ion-list>
   <button ion-item *ngFor="let venture of ventureList" (click)="ventureTapped($event, venture)">
-      <ion-icon [name]="venture.icon" item-left></ion-icon>
+    <ion-avatar class="genre-avatar" item-start>
+      <img src="https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAKSAAAAJGI0NWIyMmVlLWZjZDUtNDg1Ni05MGU1LTRkZTk2MTgzYzc3NA.jpg">
+    </ion-avatar>
+    <div class="title-in-list">
       {{venture.name}}
-      <div class="venture-id" item-right>
-        {{venture.id}}
-      </div>
+    </div>  
   </button>
   </ion-list>
 </ion-content>
