--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,6 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Welcome</h3>
+<ion-content>
   <div #map id="map" style="height: 90%;"></div>
 </ion-content>
