--- a/src/pages/all-ventures/all-ventures.html
+++ b/src/pages/all-ventures/all-ventures.html
@@ -16,7 +16,7 @@
     </ion-refresher-content>
   </ion-refresher>
   <ion-list>
-  <button ion-item *ngFor="let venture of ventureList" (click)="ventureTapped($event, venture)">
+  <button ion-item *ngFor="let venture of ventureList" (click)="ventureTapped($event, venture.id)">
       <ion-icon [name]="venture.icon" item-left></ion-icon>
       {{venture.name}}
       <div class="venture-id" item-right>
