Added searchbar to all ventures and made get items and query functions for them.

--- a/src/pages/all-ventures/all-ventures.html
+++ b/src/pages/all-ventures/all-ventures.html
@@ -9,6 +9,7 @@
 
 
 <ion-content padding>
+  <ion-searchbar (ionInput)="getItems($event)" placeholder="Find Ventures"></ion-searchbar>
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
     pullingText="Pull to refresh ventures..."
