--- a/src/pages/all-ventures/all-ventures.html
+++ b/src/pages/all-ventures/all-ventures.html
@@ -17,7 +17,7 @@
     </ion-refresher-content>
   </ion-refresher>
   <ion-list>
-  <button ion-item *ngFor="let venture of ventureList" (click)="ventureTapped($event, venture.id)">
+  <button ion-item *ngFor="let venture of queryList" (click)="ventureTapped($event, venture.id)">
       <ion-icon [name]="venture.icon" item-left></ion-icon>
       {{venture.name}}
       <div class="venture-id" item-right>
