--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content>
+  <ion-searchbar (ionInput)="getItems($event)" placeholder="Find Ventures"></ion-searchbar>
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
     pullingText="Pull to refresh ventures..."
@@ -15,7 +16,7 @@
     </ion-refresher-content>
   </ion-refresher>
   <ion-list>
-  <button ion-item *ngFor="let venture of ventureList" (click)="ventureTapped($event, venture)">
+  <button ion-item *ngFor="let venture of queryList" (click)="ventureTapped($event, venture)">
     <ion-avatar class="genre-avatar" item-start>
       <img src="https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAKSAAAAJGI0NWIyMmVlLWZjZDUtNDg1Ni05MGU1LTRkZTk2MTgzYzc3NA.jpg">
     </ion-avatar>
