--- a/src/pages/show/show.html
+++ b/src/pages/show/show.html
@@ -14,4 +14,6 @@
 <p>{{this.body}}</p>
 
 <p>Latitude: {{this.lat}} {{this.lon}}</p>
+
+<div #map id="map" style="height: 25%;"></div>
 </ion-content>
