--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,5 +8,5 @@
 </ion-header>
 
 <ion-content>
-  <div (click)="setLatLon()" #map id="map" style="height: 90%;"></div>
+  <div #map id="map" style="height: 90%;"></div>
 </ion-content>
