add cog item to top right of allventures page and allow user to click it

--- a/src/pages/all-ventures/all-ventures.html
+++ b/src/pages/all-ventures/all-ventures.html
@@ -4,11 +4,12 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>All Ventures</ion-title>
-    <ion-buttons id="genreCog" ion-button icon-only end clear>
+    <ion-buttons end>
+    <button ion-button icon-only item-end clear (click)="showList()">
         <ion-icon name="cog"></ion-icon>
+      </button>
     </ion-buttons>
   </ion-navbar>
-  
 </ion-header>
 
 
