create modal page for genre checkbox list, pass data from viewALl to modal page

--- a/src/pages/all-ventures/all-ventures.html
+++ b/src/pages/all-ventures/all-ventures.html
@@ -5,7 +5,7 @@
     </button>
     <ion-title>All Ventures</ion-title>
     <ion-buttons end>
-    <button ion-button icon-only item-end clear (click)="showList()">
+    <button ion-button icon-only item-end clear (click)="openModal()">
         <ion-icon name="cog"></ion-icon>
       </button>
     </ion-buttons>
