add user position marker to venture show pages

--- a/src/pages/show/show.html
+++ b/src/pages/show/show.html
@@ -15,5 +15,5 @@
 
 <p>Latitude: {{this.lat}} {{this.lon}}</p>
 
-<div #map id="map" style="height: 25%;"></div>
+<div #map id="map" style="height: 25%; width: 80%; margin: auto;"></div>
 </ion-content>
