--- a/src/pages/show/show.html
+++ b/src/pages/show/show.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title style="text-align: center">Venture</ion-title>
+    <ion-title>Venture</ion-title>
   </ion-navbar>
 </ion-header>
 
