--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -18,7 +18,7 @@
   <ion-list>
   <button ion-item *ngFor="let venture of queryList" (click)="ventureTapped($event, venture)">
     <ion-avatar class="genre-avatar" item-start>
-      <img src="https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAKSAAAAJGI0NWIyMmVlLWZjZDUtNDg1Ni05MGU1LTRkZTk2MTgzYzc3NA.jpg">
+      <img src="../assets/img/{{ venture.genre }}.png">
     </ion-avatar>
     <div class="title-in-list">
       {{venture.name}}
