--- a/src/pages/show/show.html
+++ b/src/pages/show/show.html
@@ -15,9 +15,9 @@
 
   <div #map id="map" style="height: 25%; width: 90%; margin: auto;"></div>
 
-</ion-content>
+<!-- </ion-content> -->
 
-<ion-content>
+<!-- <ion-content> -->
   <ion-grid>
     <ion-row>
       <ion-col id="lat-info">
